fixed spacing on homepage bottom

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -14,6 +14,7 @@ $background-opacity: 0.9;
             background: $home-image;
             background-attachment: fixed;
             background-size: cover;
+            position: relative;
 
             &:after {
                 content:'';
